# Albion-Quant-System

./: .env.example  .gitignore  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py
app/ai/: __init__.py  features.py  trainer.py
app/alerts/: __init__.py  bot.py  discord.py
app/analytics/: __init__.py  quality.py  snapshots.py
app/api/: arbitrage.py  crafting.py  export.py  fees.py  market.py  user.py
app/arbitrage/: __init__.py  scanner.py
app/blackmarket/: __init__.py  predictor.py  tracker.py
app/core/: __init__.py  config.py  constants.py  feature_gate.py  fees.py  freshness.py  icons.py  logging.py  market_utils.py  opportunity_engine.py  safe_ops.py  scanner_integration.py  scoring.py  state.py  validators.py
app/crafting/: __init__.py  engine.py
app/dashboard/: app.py
app/db/: __init__.py  check_data.py  migrate.py  models.py  repository.py  run_migration.py  session.py  timescale_repository.py
app/execution/: __init__.py  imbalance.py  liquidity.py  market_state.py  orderbook.py  queue_model.py  slippage.py  vwap.py
app/features/: __init__.py  decay.py  focus_efficiency.py  imbalance.py  liquidity.py  (+5 more)
data/: albion_quant.db-shm
docs/: AQS_Project_Description.md  EXPANSION.md  STACKMAP.md
research/: __init__.py
tests/: conftest.py  test_health.py  test_integration.py  test_integration_api.py  test_opportunity_engine.py  test_patch_diff.py  test_scheduler_lifecycle.py  test_status.py
workers/: __init__.py  scheduler.py
(+169 files in other folders)
